--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.uri=mongodb://root:root@localhost:27017/employee_db
+spring.data.mongodb.uri=mongodb://mongoadmin:secret@localhost:27888/employee_db?authSource=admin
 logging.level.root=DEBUG
+version=v1
